--- a/example/android/settings.gradle
+++ b/example/android/settings.gradle
@@ -29,11 +29,19 @@ pluginManagement {
     }
 }
 
+
 plugins {
     id "dev.flutter.flutter-plugin-loader" version "1.0.0"
     id "com.android.application" version '8.8.0' apply false
     id "org.jetbrains.kotlin.android" version "1.8.10" apply false
 }
+
+
+include ':app'
+include ':zebra_rfid_reader_sdk'
+project(':zebra_rfid_reader_sdk').projectDir = new File('../../android')
+include ':rfidlibrary'
+project(':rfidlibrary').projectDir = new File('../../android/rfidlibrary')
 
 // include ":app"include ':rfid-library'
 // api project(':spotify-app-remote')
